force-app/main/default/objects/DIR_Appeal_Party__c/fields/Appeal__c.field-meta.xml
<CustomField>
    <fullName>Appeal__c</fullName>
    <description>The appeal these parties are related to</description>
    <label>Appeal</label>
    <referenceTo>Appeal__c</referenceTo>
    <relationshipLabel>Appeal Parties</relationshipLabel>
    <relationshipName>Appeal_Parties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>