force-app/main/default/objects/DIR_Appeal_Party__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appellant</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
            <value>
                <fullName>Agent for Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>